--- a/batch2/lowTEB.ini
+++ b/batch2/lowTEB.ini
@@ -6,5 +6,6 @@ clik_data_commanderTT =
 
 clik_data_bflike = %DATASETDIR%clik/lowl_SMW_70_dx11d_2014_10_03_v5b_Ap.clik
 clik_speed_bflike = -1
+clik_params_bflike = %DATASETDIR%planck_calib.paramnames
 
 
