--- a/batch2/lowl.ini
+++ b/batch2/lowl.ini
@@ -3,4 +3,6 @@
 use_clik = T
 clik_data_commanderTT = %DATASETDIR%clik/commander_rc2_v1.1_l2_29_Ap.clik
 clik_speed_commanderTT = 0
+clik_params_commanderTT = %DATASETDIR%planck_calib.paramnames
+
 
