--- a/batch2/CAMspec_defaults.ini
+++ b/batch2/CAMspec_defaults.ini
@@ -9,10 +9,7 @@ linear_combination[SZComb] = aksz asz143
 linear_combination_weights[SZComb] = 1 1.6
 prior[SZComb] = 9.5 3
 
-#always vary total calibration
-
-param[calPlanck]=1 0.9 1.1 0.002 0.002
-prior[calPlanck]=1 0.0025
+INCLUDE(planck_calibration.ini)
 
 #All parameters fixed here, except total calibration which is always varied
 
