--- a/batch2/lowl.ini
+++ b/batch2/lowl.ini
@@ -5,4 +5,5 @@ clik_data_commanderTT = %DATASETDIR%clik/commander_rc2_v1.1_l2_29_Ap.clik
 clik_speed_commanderTT = 0
 clik_params_commanderTT = %DATASETDIR%planck_calib.paramnames
 
+DEFAULT(planck_calibration.ini)
 
