--- a/batch2/plik_v14_priors.ini
+++ b/batch2/plik_v14_priors.ini
@@ -3,4 +3,6 @@ prior[calib_100T]=0.0005 0.0005
 prior[calib_217T]=0.0025 0.001
 ####################                                                                                                                                                          
 
+INCLUDE(planck_calibration.ini)
+
 
