--- a/test.ini
+++ b/test.ini
@@ -1,24 +1,24 @@
-#DEFAULT(batch2/nonclik_v97F.ini)
-DEFAULT(batch2/CAMspec_defaults.ini)
-#DEFAULT(batch2/lowTEB.ini)
-#DEFAULT(batch2/lowLike.ini)
-
-#cmb_dataset[BICEP2]=data/BICEP/BICEP2.dataset
-#for r>0 also need compute_tensors=T:
-compute_tensors = F
+#DEFAULT(batch2/nonclik.ini)
+DEFAULT(batch2/CAMspec_TT.ini)
+DEFAULT(batch2/lowTEB.ini)
+#DEFAULT(batch2/lowl.ini)
 
 #planck lensing
 DEFAULT(batch2/lensing.ini)
 
 #Other Likelihoods
-#DEFAULT(batch2/BAO.ini)
+DEFAULT(batch2/BAO.ini)
 #DEFAULT(batch2/HST.ini)
 #DEFAULT(batch2/WiggleZ_MPK.ini)
 #DEFAULT(batch2/MPK.ini)
-DEFAULT(batch2/WL.ini)
+#DEFAULT(batch2/WL.ini)
 
 #general settings
 DEFAULT(batch2/common.ini)
+
+#cmb_dataset[BICEP2]=data/BICEP/BICEP2.dataset
+#for r>0 also need compute_tensors=T:
+compute_tensors = F
 
 #high for new runs
 MPI_Max_R_ProposeUpdate = 30
